crates/parser/test_files/errors/undefined.snap
---
source: crates/parser/tests/errors.rs
input_file: test_files/errors/undefined.sntn
snapshot_kind: text
---
error: parse error
 --> undefined.sntn:2:25
  |
2 | type @foo = { i8, i16, *@s1 };
  |                         ^^^ undefined type: `%s1`
  |error: parse error
 --> undefined.sntn:6:22
  |
6 |         v0.i8 = call @foo 100.i8;
  |                      ^^^^ inst arg kind mismtach: expected `function name`, but `type` given
  |error: parse error
 --> undefined.sntn:7:24
  |
7 |         v2.i8 = add v0 v1;
  |                        ^^ undefined value: `v1`
  |error: parse error
 --> undefined.sntn:8:21
  |
8 |         v3.i8 = add v1 v1;
  |                     ^^ undefined value: `v1`
  |error: parse error
 --> undefined.sntn:8:24
  |
8 |         v3.i8 = add v1 v1;
  |                        ^^ undefined value: `v1`
  |error: parse error
 --> undefined.sntn:9:14
  |
9 |         jump block2;
  |              ^^^^^^ undefined block: `block2`
  |
